force-app/main/default/objects/hi_buddy__c/hi_buddy__c.object-meta.xml
<CustomObject>
    <label>hi buddy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hi buddys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>