force-app/main/default/objects/hi_buddy__c/fields/about_your_business__c.field-meta.xml
<CustomField>
    <fullName>about_your_business__c</fullName>
    <label>about your business</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>