force-app/main/default/objects/hi_buddy__c/fields/abs__c.field-meta.xml
<CustomField>
    <fullName>abs__c</fullName>
    <formula>ABS( enter_age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>abs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>