force-app/main/default/objects/hi_buddy__c/fields/addmonth_example__c.field-meta.xml
<CustomField>
    <fullName>addmonth_example__c</fullName>
    <description>add month created examle</description>
    <formula>ADDMONTHS(CreatedDate  ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>addmonth example</label>
    <type>Date</type>
</CustomField>