force-app/main/default/objects/hi_buddy__c/fields/addmonths__c.field-meta.xml
<CustomField>
    <fullName>addmonths__c</fullName>
    <formula>ADDMONTHS( DOB__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>addmonths</label>
    <type>Date</type>
</CustomField>