force-app/main/default/objects/hi_buddy__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>TEXT(YEAR(TODAY())-YEAR( DOB__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <type>Text</type>
</CustomField>