force-app/main/default/objects/hi_buddy__c/fields/beginswith__c.field-meta.xml
<CustomField>
    <fullName>beginswith__c</fullName>
    <formula>&quot;calculate data is&quot;&amp; if(BEGINS(&quot;arvind&quot;,&quot;s&quot;), &quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>beginswith</label>
    <type>Text</type>
</CustomField>