force-app/main/default/objects/hi_buddy__c/fields/break_line__c.field-meta.xml
<CustomField>
    <fullName>break_line__c</fullName>
    <formula>&quot;my dear friend &quot; &amp; BR()+ &quot;how are you &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>break line</label>
    <type>Text</type>
</CustomField>