force-app/main/default/objects/hi_buddy__c/fields/ceiling__c.field-meta.xml
<CustomField>
    <fullName>ceiling__c</fullName>
    <formula>CEILING(-2.56)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ceiling</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>