force-app/main/default/objects/hi_buddy__c/fields/contains__c.field-meta.xml
<CustomField>
    <fullName>contains__c</fullName>
    <formula>if ( CONTAINS( fathers_name__c , &quot;anshul&quot;) ,&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contains</label>
    <type>Text</type>
</CustomField>