force-app/main/default/objects/hi_buddy__c/fields/date_difference__c.field-meta.xml
<CustomField>
    <fullName>date_difference__c</fullName>
    <formula>TODAY() - DATEVALUE( time_of_sunrise__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>