force-app/main/default/objects/hi_buddy__c/fields/date_of_joining__c.field-meta.xml
<CustomField>
    <fullName>date_of_joining__c</fullName>
    <formula>DATE(1983,05,06)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date of joining</label>
    <type>Date</type>
</CustomField>