force-app/main/default/objects/hi_buddy__c/fields/date_value__c.field-meta.xml
<CustomField>
    <fullName>date_value__c</fullName>
    <formula>DATEVALUE( time_of_sunrise__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date value</label>
    <type>Date</type>
</CustomField>