force-app/main/default/objects/hi_buddy__c/fields/datetimevalue__c.field-meta.xml
<CustomField>
    <fullName>datetimevalue__c</fullName>
    <formula>DATETIMEVALUE( time_of_sunrise__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>datetimevalue</label>
    <type>Date</type>
</CustomField>