force-app/main/default/objects/hi_buddy__c/fields/datetimevalues__c.field-meta.xml
<CustomField>
    <fullName>datetimevalues__c</fullName>
    <formula>DATETIMEVALUE( &quot;date_of_joining__c time_of_birth__c&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>datetimevalue</label>
    <type>DateTime</type>
</CustomField>