force-app/main/default/objects/hi_buddy__c/fields/day__c.field-meta.xml
<CustomField>
    <fullName>day__c</fullName>
    <formula>DAY( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>