force-app/main/default/objects/hi_buddy__c/fields/distance__c.field-meta.xml
<CustomField>
    <fullName>distance__c</fullName>
    <formula>DISTANCE( home_location__c ,  home_location__c  ,&quot;km&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>