force-app/main/default/objects/hi_buddy__c/fields/enter_age__c.field-meta.xml
<CustomField>
    <fullName>enter_age__c</fullName>
    <label>enter age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>