force-app/main/default/objects/hi_buddy__c/fields/exp__c.field-meta.xml
<CustomField>
    <fullName>exp__c</fullName>
    <formula>EXP(4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>exp</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>