force-app/main/default/objects/hi_buddy__c/fields/find__c.field-meta.xml
<CustomField>
    <fullName>find__c</fullName>
    <formula>FIND(&quot;@&quot;,  email_address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>find</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>