force-app/main/default/objects/hi_buddy__c/fields/floor__c.field-meta.xml
<CustomField>
    <fullName>floor__c</fullName>
    <formula>FLOOR(2.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>floor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>