force-app/main/default/objects/hi_buddy__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>male</fullName>
            </value>
            <value>
                <fullName>female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>