force-app/main/default/objects/hi_buddy__c/fields/graduation_percentage__c.field-meta.xml
<CustomField>
    <fullName>graduation_percentage__c</fullName>
    <label>graduation percentage</label>
    <precision>17</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>