force-app/main/default/objects/hi_buddy__c/fields/home_location__c.field-meta.xml
<CustomField>
    <fullName>home_location__c</fullName>
    <label>home location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>