force-app/main/default/objects/hi_buddy__c/fields/hour__c.field-meta.xml
<CustomField>
    <fullName>hour__c</fullName>
    <formula>HOUR(TIMEVALUE(&quot;17:30:45.125&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>