force-app/main/default/objects/hi_buddy__c/fields/hyperlink__c.field-meta.xml
<CustomField>
    <fullName>hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://www.udemy.com/courses/search/?src=ukw&amp;q=python+project&quot;, &quot;udemy&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hyperlink</label>
    <type>Text</type>
</CustomField>