force-app/main/default/objects/hi_buddy__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <formula>IMAGE(&quot;https://pixabay.com/images/search/nature/&quot;,&quot;image is super &quot;,20,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>image</label>
    <type>Text</type>
</CustomField>