force-app/main/default/objects/hi_buddy__c/fields/includes__c.field-meta.xml
<CustomField>
    <fullName>includes__c</fullName>
    <formula>if(INCLUDES( skills__c , &quot;autocad&quot;),&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>includes</label>
    <type>Text</type>
</CustomField>