force-app/main/default/objects/hi_buddy__c/fields/INR__c.field-meta.xml
<CustomField>
    <fullName>INR__c</fullName>
    <label>INR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>