force-app/main/default/objects/hi_buddy__c/fields/is_year__c.field-meta.xml
<CustomField>
    <fullName>is_year__c</fullName>
    <formula>TEXT(ISOYEAR(date_of_joining__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is year</label>
    <type>Text</type>
</CustomField>