force-app/main/default/objects/hi_buddy__c/fields/isblank__c.field-meta.xml
<CustomField>
    <fullName>isblank__c</fullName>
    <formula>IF(ISBLANK(age__c),&quot;khali hai &quot;,&quot;khali nhi hai&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isblank</label>
    <type>Text</type>
</CustomField>