force-app/main/default/objects/hi_buddy__c/fields/isnull__c.field-meta.xml
<CustomField>
    <fullName>isnull__c</fullName>
    <formula>IF(ISNULL(address__c),&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isnull</label>
    <type>Text</type>
</CustomField>