force-app/main/default/objects/hi_buddy__c/fields/isnumber__c.field-meta.xml
<CustomField>
    <fullName>isnumber__c</fullName>
    <formula>TEXT (IF(ISNUMBER( fathers_name__c ),1,0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isnumber</label>
    <type>Text</type>
</CustomField>