force-app/main/default/objects/hi_buddy__c/fields/iso_weak__c.field-meta.xml
<CustomField>
    <fullName>iso_weak__c</fullName>
    <formula>TEXT( ISOWEEK( DOB__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iso weak</label>
    <type>Text</type>
</CustomField>