force-app/main/default/objects/hi_buddy__c/fields/ispickval__c.field-meta.xml
<CustomField>
    <fullName>ispickval__c</fullName>
    <formula>if(ISPICKVAL( gender__c , &quot;male&quot;),&quot;aadmi hai&quot;,&quot;orat hai&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ispickval</label>
    <type>Text</type>
</CustomField>