force-app/main/default/objects/hi_buddy__c/fields/left__c.field-meta.xml
<CustomField>
    <fullName>left__c</fullName>
    <formula>LEFT( fathers_name__c , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>left</label>
    <type>Text</type>
</CustomField>