force-app/main/default/objects/hi_buddy__c/fields/len__c.field-meta.xml
<CustomField>
    <fullName>len__c</fullName>
    <formula>LEN( fathers_name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>len</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>