force-app/main/default/objects/hi_buddy__c/fields/lower__c.field-meta.xml
<CustomField>
    <fullName>lower__c</fullName>
    <formula>LOWER( address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lower</label>
    <type>Text</type>
</CustomField>