force-app/main/default/objects/hi_buddy__c/fields/max__c.field-meta.xml
<CustomField>
    <fullName>max__c</fullName>
    <formula>MAX( abs__c , enter_age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>