force-app/main/default/objects/hi_buddy__c/fields/mid__c.field-meta.xml
<CustomField>
    <fullName>mid__c</fullName>
    <formula>MID( upper__c , 3, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mid</label>
    <type>Text</type>
</CustomField>