force-app/main/default/objects/hi_buddy__c/fields/mobile_number__c.field-meta.xml
<CustomField>
    <fullName>mobile_number__c</fullName>
    <label>mobile number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>