force-app/main/default/objects/hi_buddy__c/fields/now__c.field-meta.xml
<CustomField>
    <fullName>now__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>now</label>
    <type>DateTime</type>
</CustomField>