force-app/main/default/objects/hi_buddy__c/fields/pass__c.field-meta.xml
<CustomField>
    <fullName>pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 th pass</label>
    <type>Checkbox</type>
</CustomField>