force-app/main/default/objects/hi_buddy__c/fields/right__c.field-meta.xml
<CustomField>
    <fullName>right__c</fullName>
    <formula>RIGHT( fathers_name__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>right</label>
    <type>Text</type>
</CustomField>