force-app/main/default/objects/hi_buddy__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>credit card numbers</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>