force-app/main/default/objects/hi_buddy__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <label>skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>python</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>html</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>