force-app/main/default/objects/hi_buddy__c/fields/substitute__c.field-meta.xml
<CustomField>
    <fullName>substitute__c</fullName>
    <formula>SUBSTITUTE( address__c , &quot;mg&quot; , &quot;mahatma gandhi&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>substitute</label>
    <type>Text</type>
</CustomField>