force-app/main/default/objects/hi_buddy__c/fields/textformula__c.field-meta.xml
<CustomField>
    <fullName>textformula__c</fullName>
    <formula>&quot;my birthday is &quot; &amp; TEXT( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>textformula</label>
    <type>Text</type>
</CustomField>