force-app/main/default/objects/hi_buddy__c/fields/time_of_birth__c.field-meta.xml
<CustomField>
    <fullName>time_of_birth__c</fullName>
    <label>time of birth</label>
    <type>Time</type>
</CustomField>