force-app/main/default/objects/hi_buddy__c/fields/time_of_sunrise__c.field-meta.xml
<CustomField>
    <fullName>time_of_sunrise__c</fullName>
    <label>time of sunrise</label>
    <type>DateTime</type>
</CustomField>