force-app/main/default/objects/hi_buddy__c/fields/timenow__c.field-meta.xml
<CustomField>
    <fullName>timenow__c</fullName>
    <formula>TIMENOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timenow</label>
    <type>Time</type>
</CustomField>