force-app/main/default/objects/hi_buddy__c/fields/timevalue__c.field-meta.xml
<CustomField>
    <fullName>timevalue__c</fullName>
    <formula>TIMEVALUE(&quot;17:30:45.125&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timevalue</label>
    <type>Time</type>
</CustomField>