force-app/main/default/objects/hi_buddy__c/fields/trim__c.field-meta.xml
<CustomField>
    <fullName>trim__c</fullName>
    <formula>TRIM( address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>trim</label>
    <type>Text</type>
</CustomField>