force-app/main/default/objects/hi_buddy__c/fields/upper__c.field-meta.xml
<CustomField>
    <fullName>upper__c</fullName>
    <formula>UPPER( address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>upper</label>
    <type>Text</type>
</CustomField>