force-app/main/default/objects/hi_buddy__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <formula>VALUE( age__c )+  VALUE(mobile_number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>