force-app/main/default/objects/hi_buddy__c/fields/website_address__c.field-meta.xml
<CustomField>
    <fullName>website_address__c</fullName>
    <label>website address</label>
    <type>Url</type>
</CustomField>