force-app/main/default/objects/hi_buddy__c/fields/weekday__c.field-meta.xml
<CustomField>
    <fullName>weekday__c</fullName>
    <formula>WEEKDAY( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>weekday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>