force-app/main/default/objects/hi_buddy__c/fields/write_about_your_hobbies__c.field-meta.xml
<CustomField>
    <fullName>write_about_your_hobbies__c</fullName>
    <label>write about your hobbies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>