force-app/main/default/objects/hi_buddy__c/fields/X12_th_not_pass__c.field-meta.xml
<CustomField>
    <fullName>X12_th_not_pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 th not pass</label>
    <type>Checkbox</type>
</CustomField>